fix overflow in anime selection

--- a/src/css/options.css
+++ b/src/css/options.css
@@ -307,21 +307,6 @@ input[type="checkbox"] {
 }
 
 /***************************
-	Anime Selection Modal
-***************************/
-
-#modal-container #select-new-anime .sort-titles {
-	display: grid;
-	grid-template-columns: 25% 25% 15% 35%;
-	background-color: #f1f3f9;
-	text-align: center;
-	padding: 10px;
-	color: #8898aa;
-	text-transform: uppercase;
-	font-size: 11px;
-}
-
-/***************************
 	  Anime List Display
 ***************************/
 
@@ -400,16 +385,33 @@ input[type="checkbox"] {
 }
 
 /***************************
-   Anime Selection Display
+	Anime Selection Modal
 ***************************/
+
+#modal-container #select-new-anime .sort-titles {
+	display: grid;
+	grid-template-columns: 25% 25% 15% 35%;
+	background-color: #f1f3f9;
+	text-align: center;
+	padding: 10px;
+	color: #8898aa;
+	text-transform: uppercase;
+	font-size: 11px;
+}
 
 #select-new-anime {
 	display: none;
 }
 
-#select-new-anime {
+#anime-selection-container {
 	text-align: center;
+	grid-column: span 4;
+	max-height: 65vh;
 }
+
+/***************************
+   Anime Selection Display
+***************************/
 
 #select-new-anime .sort-titles .list-title {
 	text-align: center;
